tests/parser/matlab_2021a_name_value_pairs/nv_pair_1.m.out
In nv_pair_1.m, line 3
| plot(x,y,LineWidth=2);
|                   ^ error: expected IDENTIFIER, found ASSIGNMENT instead
MISS_HIT Debug Summary: 1 file(s) analysed, 1 error(s)
