tests/parser/matlab_2021a_name_value_pairs/nv_pair_1.m
% Example taken from the 2021a release notes

plot(x,y,LineWidth=2);

% Basic example that should just work.
% Intended semantics are plot(x,y,"LineWidth",2)

% Yes, this is completely nuts and a very different use of = that
% literally any other language has.
